--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -12,12 +12,23 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="@string/loading"
+                android:id="@+id/loadingText"
+                android:textColor="@color/secondary_text"
+                android:layout_centerHorizontal="true"/>
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/messagesListView"
         android:background="@drawable/bg"
-        android:layout_above="@+id/relativeLayout" />
+        android:layout_above="@+id/relativeLayout"
+        android:focusable="false"
+        android:divider="@null"/>
+
 
     <RelativeLayout
         android:layout_width="match_parent"
