--- a/app/src/main/res/layout/products_of_category.xml
+++ b/app/src/main/res/layout/products_of_category.xml
@@ -4,13 +4,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-<android.support.v7.widget.CardView
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="5dp"
-    android:layout_marginBottom="5dp"
-    app:cardCornerRadius="4dp"
-    app:cardBackgroundColor="@color/whiteBackground">
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -19,16 +13,27 @@
         android:layout_height="wrap_content"
         android:text="Title"
         android:padding="5dp"
-        android:layout_margin="3dp"
-        android:textColor="@color/accent"
+        android:textColor="#fafafa"
         android:id="@+id/title"
-        android:textAppearance="?android:attr/textAppearanceMedium"/>
+        android:shadowColor="@android:color/black"
+        android:shadowDx="0"
+        android:shadowDy="2"
+        android:shadowRadius="3"
+        android:textAppearance="?android:attr/textAppearanceLarge"/>
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="4dp"
+            app:cardBackgroundColor="@android:color/transparent"
+            app:cardElevation="2dp"
+            android:layout_below="@+id/title">
     <org.lucasr.twowayview.TwoWayView
+        android:background="@color/whiteBackground"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/gridHorizontal"
-        android:layout_below="@+id/title"
         />
+
+        </android.support.v7.widget.CardView>
     </RelativeLayout>
-</android.support.v7.widget.CardView>
 </LinearLayout>
