--- a/app/src/main/res/layout/grid_item.xml
+++ b/app/src/main/res/layout/grid_item.xml
@@ -34,8 +34,9 @@
                 android:maxLines="2"
                 android:background="@color/labelBackground"
                 android:layout_alignBottom="@+id/gridImg"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true" />
+                android:layout_toLeftOf="@+id/viewCount"
+                android:layout_toStartOf="@+id/viewCount"
+                android:padding="3dp" />
 
 
         <ImageView
@@ -53,16 +54,16 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textSize="15sp"
             android:text="view count"
             android:id="@+id/viewCount"
-            android:padding="5dp"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
             android:textColor="@android:color/white"
             android:background="@color/labelBackground"
-            android:visibility="gone"/>
+            android:visibility="gone"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:padding="3dp"/>
 
 
     </RelativeLayout>
