--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.tech.thrithvam.boutiqueapp.Chat"
+    android:id="@+id/drawerLayout"
     >
     <FrameLayout
         android:id="@+id/content_frame"
@@ -73,10 +74,11 @@
     <RelativeLayout
         android:layout_width="280dp"
         android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:background="@android:drawable/dialog_holo_light_frame">
+        android:layout_gravity="end"
+        android:background="@android:drawable/dialog_holo_light_frame"
+        android:id="@+id/rightDrawer">
         <ListView
-            android:id="@+id/left_drawer"
+            android:id="@+id/drawer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:choiceMode="singleChoice"
@@ -86,7 +88,7 @@
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             android:background="@color/divider"
-            android:layout_below="@id/left_drawer"
+            android:layout_below="@id/drawer"
             />
 
     </RelativeLayout>
