--- a/app/src/main/res/layout/activity_grid_of_products.xml
+++ b/app/src/main/res/layout/activity_grid_of_products.xml
@@ -5,7 +5,8 @@
     android:layout_height="match_parent"
     tools:context="com.tech.thrithvam.boutiqueapp.Home"
     android:animateLayoutChanges="true"
-    android:background="@drawable/bg">
+    android:background="@drawable/bg"
+    android:id="@+id/drawerLayout">
 
     <FrameLayout
         android:id="@+id/content_frame"
@@ -24,10 +25,11 @@
     <RelativeLayout
         android:layout_width="280dp"
         android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:background="@android:drawable/dialog_holo_light_frame">
+        android:layout_gravity="end"
+        android:background="@android:drawable/dialog_holo_light_frame"
+        android:id="@+id/rightDrawer">
         <ListView
-            android:id="@+id/left_drawer"
+            android:id="@+id/drawer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:choiceMode="singleChoice"
@@ -37,7 +39,7 @@
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             android:background="@color/divider"
-            android:layout_below="@id/left_drawer"
+            android:layout_below="@id/drawer"
             />
 
     </RelativeLayout>
