--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -5,7 +5,8 @@
     android:layout_height="match_parent"
     tools:context="com.tech.thrithvam.boutiqueapp.Home"
     android:animateLayoutChanges="true"
-    android:background="@color/primary">
+    android:background="@color/primary"
+    android:id="@+id/drawerLayout">
 
     <FrameLayout
         android:id="@+id/content_frame"
@@ -42,7 +43,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/searchView"
             android:queryHint="Search"
-            android:background="#9dffffff"
+            android:background="@android:color/transparent"
             android:layout_alignParentTop="true"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
@@ -58,10 +59,11 @@
     <RelativeLayout
         android:layout_width="280dp"
         android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:background="@android:drawable/dialog_holo_light_frame">
+        android:layout_gravity="end"
+        android:background="@android:drawable/dialog_holo_light_frame"
+        android:id="@+id/rightDrawer">
         <ListView
-            android:id="@+id/left_drawer"
+            android:id="@+id/drawer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:choiceMode="singleChoice"
@@ -71,7 +73,7 @@
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             android:background="@color/divider"
-            android:layout_below="@id/left_drawer"
+            android:layout_below="@id/drawer"
             />
 
     </RelativeLayout>
