--- a/app/src/main/res/layout/activity_product_reviews.xml
+++ b/app/src/main/res/layout/activity_product_reviews.xml
@@ -6,7 +6,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.tech.thrithvam.boutiqueapp.ProductReviews"
     android:background="@drawable/bg"
-    android:animateLayoutChanges="true">
+    android:animateLayoutChanges="true"
+    android:id="@+id/drawerLayout">
     <FrameLayout
         android:id="@+id/content_frame"
         android:layout_width="match_parent"
@@ -92,10 +93,11 @@
     <RelativeLayout
         android:layout_width="280dp"
         android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:background="@android:drawable/dialog_holo_light_frame">
+        android:layout_gravity="end"
+        android:background="@android:drawable/dialog_holo_light_frame"
+        android:id="@+id/rightDrawer">
         <ListView
-            android:id="@+id/left_drawer"
+            android:id="@+id/drawer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:choiceMode="singleChoice"
@@ -105,7 +107,7 @@
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             android:background="@color/divider"
-            android:layout_below="@id/left_drawer"
+            android:layout_below="@id/drawer"
             />
 
     </RelativeLayout>
