--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -3,14 +3,88 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.tech.thrithvam.boutiqueapp.Chat"
     android:id="@+id/drawerLayout"
-    android:background="@drawable/bg"
-    >
+    android:background="@drawable/bg">
     <FrameLayout
         android:id="@+id/content_frame"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:id="@+id/productDetail">
+            <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="7dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginRight="7dp"
+                android:layout_marginBottom="5dp"
+                app:cardCornerRadius="4dp"
+                app:cardBackgroundColor="@color/primary_light">
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="5dp"
+            android:layout_margin="5dp">
+
+            <ImageView
+                android:layout_width="80dp"
+                android:layout_height="100dp"
+                android:layout_margin="2dp"
+                android:scaleType="centerInside"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:id="@+id/productImg" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="2dp"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="Product Name"
+                android:id="@+id/productName"
+                android:maxLines="1"
+                android:ellipsize="end"
+                android:layout_alignTop="@+id/productImg"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
+                android:layout_toRightOf="@+id/productImg"
+                android:layout_toEndOf="@+id/productImg" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textColor="@color/primary_text"
+                android:text="@string/product_no"
+                android:id="@+id/productNo"
+                android:padding="2dp"
+                android:layout_below="@+id/productName"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignLeft="@+id/productName"
+                android:layout_alignStart="@+id/productName"
+                android:gravity="end"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textColor="@color/primary_text"
+                android:text="@string/rs"
+                android:padding="2dp"
+                android:id="@+id/productPrice"
+                android:layout_below="@+id/productNo"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
+                android:layout_toRightOf="@+id/productImg"
+                android:layout_toEndOf="@+id/productImg"
+                android:gravity="end"/>
+        </RelativeLayout>
+            </android.support.v7.widget.CardView>
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
@@ -26,7 +100,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/messagesListView"
-        android:background="@drawable/bg"
         android:layout_above="@+id/relativeLayout"
         android:focusable="false"
         android:divider="@null"/>
@@ -71,6 +144,7 @@
             android:layout_centerVertical="true"/>
     </RelativeLayout>
         </RelativeLayout>
+        </LinearLayout>
     </FrameLayout>
     <RelativeLayout
         android:layout_width="280dp"
