--- a/app/src/main/res/layout/activity_item_details.xml
+++ b/app/src/main/res/layout/activity_item_details.xml
@@ -102,7 +102,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="☆ $d people favorites it"
+            android:text="@string/favorite_count"
             android:textIsSelectable="false"
             android:textColor="@color/secondary_text"
             android:id="@+id/favCount"
@@ -121,9 +121,18 @@
             android:text="Description Loading..."
             android:id="@+id/description" />
 
-
+        <TextView
+            android:layout_below="@+id/description"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="@string/product_no"
+            android:textIsSelectable="false"
+            android:textColor="@color/secondary_text"
+            android:id="@+id/productNo"
+            android:gravity="center"/>
             <TextView
-                android:layout_below="@+id/description"
+                android:layout_below="@+id/productNo"
                 android:paddingRight="15dp"
                 android:paddingLeft="15dp"
                 android:layout_width="wrap_content"
@@ -139,7 +148,7 @@
                 android:layout_toLeftOf="@+id/price"
                 android:layout_toStartOf="@+id/price" />
             <TextView
-                android:layout_below="@+id/description"
+                android:layout_below="@+id/productNo"
                 android:paddingRight="15dp"
                 android:paddingLeft="15dp"
                 android:layout_width="wrap_content"
