--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -37,7 +37,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Boutique App"
+        android:text="@string/splash_title"
 
         android:id="@+id/title"
         android:layout_centerHorizontal="true"
@@ -51,7 +51,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="- Meet the styles -"
+        android:text="@string/splash_tagline"
         android:id="@+id/tagLine"
         android:layout_gravity="center_horizontal|bottom"
         android:layout_alignParentBottom="true"
