design, chat, label, rectifications

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.tech.thrithvam.boutiqueapp.Home"
     android:animateLayoutChanges="true"
     android:background="@drawable/backimg"
@@ -21,7 +22,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:id="@+id/homeScreen"
             >
 
 
@@ -51,8 +51,31 @@
             />
 
     </RelativeLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
 
+                android:id="@+id/homeScreen"/>
+            <com.wang.avi.AVLoadingIndicatorView
+                android:id="@+id/itemsLoading"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                app:indicator="BallPulse"
+                app:indicator_color="@android:color/white"
+                />
 
+            <ImageView
+                android:layout_marginTop="5dp"
+                android:layout_width="match_parent"
+                android:layout_height="35dp"
+                android:id="@+id/tiquesinnlabel"
+                android:src="@drawable/tiquesinnlabel"
+                android:scaleType="centerInside"
+                android:background="@color/primary"/>
         </LinearLayout>
 </com.github.ksoichiro.android.observablescrollview.ObservableScrollView>
     </FrameLayout>
