--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -14,8 +14,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:id="@+id/productDetail">
+            android:orientation="vertical">
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -24,7 +23,8 @@
                 android:layout_marginRight="7dp"
                 android:layout_marginBottom="5dp"
                 app:cardCornerRadius="4dp"
-                app:cardBackgroundColor="@color/primary_light">
+                app:cardBackgroundColor="@color/primary_light"
+                android:id="@+id/productDetail">
         <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -45,7 +45,7 @@
                 android:layout_height="wrap_content"
                 android:padding="2dp"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="Product Name"
+                android:text=""
                 android:id="@+id/productName"
                 android:maxLines="1"
                 android:ellipsize="end"
@@ -60,7 +60,7 @@
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textColor="@color/primary_text"
-                android:text="@string/product_no"
+                android:text=""
                 android:id="@+id/productNo"
                 android:padding="2dp"
                 android:layout_below="@+id/productName"
@@ -74,7 +74,7 @@
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textColor="@color/primary_text"
-                android:text="@string/rs"
+                android:text=""
                 android:padding="2dp"
                 android:id="@+id/productPrice"
                 android:layout_below="@+id/productNo"
