--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -297,7 +297,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="User Name"
+                    android:text=""
                     android:id="@+id/user_name"
                     android:textColor="@color/primary_text"
                     android:paddingLeft="0dp"
@@ -349,7 +349,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Your loyalty card number is"
+                    android:text="@string/your_loyalty_card_number_is"
                     android:id="@+id/textView10"
                     android:textColor="@color/secondary_text"
                     android:padding="10dp"
