--- a/app/src/main/res/layout/activity_owner_and_designer.xml
+++ b/app/src/main/res/layout/activity_owner_and_designer.xml
@@ -53,6 +53,16 @@
                 android:padding="7dp"
                 android:textColor="@color/primary_text"
                 android:spinnerMode="dialog" />
+                <com.wang.avi.AVLoadingIndicatorView
+                    android:id="@+id/itemsLoading"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:visibility="visible"
+                    app:indicator="BallTrianglePath"
+                    app:indicator_color="@color/primary_text"
+                    android:layout_centerVertical="true"
+                    android:layout_centerHorizontal="true"
+                    android:layout_below="@+id/name"/>
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
