--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -59,7 +59,7 @@
             android:layout_below="@+id/mobLogin"
             android:layout_alignRight="@+id/mobLogin"
             android:layout_alignEnd="@+id/mobLogin"
-            android:background="@color/accent"
+            android:background="@drawable/button"
             android:textColor="@android:color/white"
             android:onClick="login"/>
 
@@ -70,7 +70,7 @@
             android:id="@+id/sign_up"
             android:layout_alignLeft="@+id/mobLogin"
             android:layout_alignStart="@+id/mobLogin"
-            android:background="@color/accent"
+            android:background="@drawable/button"
             android:layout_alignParentBottom="true"
             android:textColor="@android:color/white"
             android:onClick="sign_up"/>
@@ -245,7 +245,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true"
                 android:onClick="sign_up_filled"
-                android:background="@color/accent"
+                android:background="@drawable/button"
                 android:textColor="@android:color/white"/>
             <Button
                 android:layout_width="wrap_content"
@@ -256,7 +256,7 @@
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:onClick="sign_up_cancel"
-                android:background="@color/accent"
+                android:background="@drawable/button"
                 android:textColor="@android:color/white"/>
         </RelativeLayout>
         </android.support.v7.widget.CardView>
