--- a/app/src/main/res/layout/activity_owner_and_designer.xml
+++ b/app/src/main/res/layout/activity_owner_and_designer.xml
@@ -67,7 +67,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="Profile"
+                android:text=""
                 android:id="@+id/profile"
                 android:textColor="@color/primary_text"
                 android:layout_below="@+id/name"
@@ -77,7 +77,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:text="Phone"
+                    android:text=""
                     android:id="@+id/phone"
                     android:textColor="@color/accent"
                     android:layout_below="@+id/profile"
@@ -112,6 +112,15 @@
         android:layout_gravity="end"
         android:background="@android:drawable/dialog_holo_light_frame"
         android:id="@+id/rightDrawer">
+        <com.wang.avi.AVLoadingIndicatorView
+            android:id="@+id/catItemsLoading"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:visibility="visible"
+            app:indicator="BallTrianglePath"
+            app:indicator_color="@color/primary_text"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"/>
         <ListView
             android:id="@+id/drawer"
             android:layout_width="match_parent"
