--- a/app/src/main/res/layout/activity_boutique_details.xml
+++ b/app/src/main/res/layout/activity_boutique_details.xml
@@ -12,9 +12,12 @@
         android:id="@+id/content_frame"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-    <ScrollView
+
+        <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:id="@+id/detailsScroll"
+        android:visibility="gone">
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
@@ -330,6 +333,15 @@
 </LinearLayout>
         </LinearLayout>
     </ScrollView>
+
+        <com.wang.avi.AVLoadingIndicatorView
+            android:id="@+id/itemsLoading"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:visibility="visible"
+            app:indicator="BallTrianglePath"
+            app:indicator_color="@color/primary_text"
+            android:layout_gravity="center" />
     </FrameLayout>
     <RelativeLayout
         android:layout_width="280dp"
@@ -337,6 +349,15 @@
         android:layout_gravity="end"
         android:background="@android:drawable/dialog_holo_light_frame"
         android:id="@+id/rightDrawer">
+        <com.wang.avi.AVLoadingIndicatorView
+            android:id="@+id/catItemsLoading"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:visibility="visible"
+            app:indicator="BallTrianglePath"
+            app:indicator_color="@color/primary_text"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"/>
         <ListView
             android:id="@+id/drawer"
             android:layout_width="match_parent"
