--- a/app/src/main/res/layout/activity_order_product_list.xml
+++ b/app/src/main/res/layout/activity_order_product_list.xml
@@ -150,6 +150,15 @@
                 android:textColor="@color/secondary_text"
                 android:layout_below="@+id/productsLabel"
                 android:layout_centerHorizontal="true"/>
+            <com.wang.avi.AVLoadingIndicatorView
+                android:id="@+id/itemsLoading"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:visibility="visible"
+                app:indicator="BallTrianglePath"
+                app:indicator_color="@color/primary_text"
+                android:layout_centerVertical="true"
+                android:layout_centerHorizontal="true"/>
             <ListView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
