--- a/app/src/main/res/layout/activity_order_status.xml
+++ b/app/src/main/res/layout/activity_order_status.xml
@@ -3,10 +3,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.tech.thrithvam.boutiqueapp.OrderStatus"
     android:background="@drawable/bg"
     android:animateLayoutChanges="true">
-
+    <com.wang.avi.AVLoadingIndicatorView
+        android:id="@+id/itemsLoading"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:visibility="visible"
+        app:indicator="BallTrianglePath"
+        app:indicator_color="@color/primary_text"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
