--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -30,6 +30,15 @@
             android:layout_height="wrap_content"
             android:padding="5dp"
             android:layout_margin="5dp">
+            <com.wang.avi.AVLoadingIndicatorView
+                android:id="@+id/prodDetLoading"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:visibility="visible"
+                app:indicator="BallTrianglePath"
+                app:indicator_color="@color/primary_text"
+                android:layout_centerVertical="true"
+                android:layout_centerHorizontal="true"/>
 
             <ImageView
                 android:layout_width="80dp"
@@ -152,6 +161,15 @@
         android:layout_gravity="end"
         android:background="@android:drawable/dialog_holo_light_frame"
         android:id="@+id/rightDrawer">
+        <com.wang.avi.AVLoadingIndicatorView
+            android:id="@+id/catItemsLoading"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:visibility="visible"
+            app:indicator="BallTrianglePath"
+            app:indicator_color="@color/primary_text"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"/>
         <ListView
             android:id="@+id/drawer"
             android:layout_width="match_parent"
