--- a/app/src/main/res/layout/activity_product_reviews.xml
+++ b/app/src/main/res/layout/activity_product_reviews.xml
@@ -36,6 +36,7 @@
                         android:text="@string/loading"
                         android:id="@+id/loadingText"
                         android:textColor="@color/secondary_text"
+                        android:layout_margin="5dp"
                         android:layout_centerHorizontal="true"/>
                     <com.wang.avi.AVLoadingIndicatorView
                         android:id="@+id/itemsLoading"
