--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -48,6 +48,7 @@
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
             android:maxWidth="10000dp"
+            android:onClick="dsfas"
             />
 
     </RelativeLayout>
