--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -48,7 +48,6 @@
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
             android:maxWidth="10000dp"
-            android:onClick="dsfas"
             />
 
     </RelativeLayout>
@@ -77,7 +76,8 @@
                 android:src="@drawable/tiquesinnlabel"
                 android:scaleType="centerInside"
                 android:background="@color/primary"
-                android:visibility="invisible"/>
+                android:visibility="invisible"
+                android:onClick="tiquesinnsite"/>
         </LinearLayout>
 </com.github.ksoichiro.android.observablescrollview.ObservableScrollView>
     </FrameLayout>
