--- a/app/src/main/res/layout/products_of_category.xml
+++ b/app/src/main/res/layout/products_of_category.xml
@@ -19,14 +19,28 @@
         android:shadowDx="0"
         android:shadowDy="2"
         android:shadowRadius="3"
-        android:textAppearance="?android:attr/textAppearanceLarge"/>
+        android:textAppearance="?android:attr/textAppearanceMedium"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="10sp"
+            android:textColor="@android:color/white"
+            android:text="@string/view_all"
+            android:background="@drawable/button"
+            android:padding="5dp"
+            android:layout_margin="2dp"
+            android:id="@+id/textView"
+            android:layout_above="@+id/cardview"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true" />
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:cardCornerRadius="4dp"
             app:cardBackgroundColor="@android:color/transparent"
             app:cardElevation="2dp"
-            android:layout_below="@+id/title">
+            android:layout_below="@+id/title"
+            android:id="@+id/cardview">
     <org.lucasr.twowayview.TwoWayView
         android:background="@color/whiteBackground"
         android:layout_width="match_parent"
